Fix spacing and add modal spinner

--- a/components/Misc.module.scss
+++ b/components/Misc.module.scss
@@ -158,6 +158,18 @@
         }
     }
 }
+.modalSpinner {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
 
 .wordmark {
     background: url("~../../../static/wordmark.svg");
