--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -67,8 +67,10 @@
     flex-shrink: 0;
     flex-basis: 100%;
     margin: 0;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0 1rem 1rem;
+    &:last-child {
+        padding-bottom: 0;
+    }
     max-width: 100%;
     display: flex;
     flex-direction: column;
